syntax = "proto3";

option csharp_namespace = "NotificationService.Protos";

package notification;

// The Notification service definition 
service Notification {
  rpc SendEmail (EmailRequest) returns (EmailResponse);
}

// The request message containing the user's email
message EmailRequest {
  string to = 1;
  string subject = 2;
  string body = 3;
}

// The response message containing the status of the email sent
message EmailResponse {
  bool success = 1;
  string message = 2;
}